--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 @charset "UTF-8";
 
+@media only screen and (max-width: 480px) {
+    @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+
 @font-face {
     font-family: Freshman;
     src: url(fontes/Freshman.ttf) format(truetype);
@@ -12,7 +17,8 @@
     --cor3:#F2921D;
     --cor4:#F2F2F2;
 
-    --fonte1:"Freshman" , sans-serif ;
+    --fonte1:"Kanit", sans-serif;
+    --fonte2:"Inter", sans-serif;
 }
 
 * {
@@ -21,13 +27,13 @@
 }
 
 body {
-    background-color: rgba(17, 238, 135, 0.955);
+    background-color: rgb(185, 177, 177);
 }
 
 header {
-    background-color: var(--cor2);
-    padding-bottom: 8px;
-    padding-top: 25px;
+    background: linear-gradient(90deg, var(--cor0), var(--cor3), var(--cor2));
+    padding-bottom: 30px;
+    padding-top: 10px;
     text-align: center;
 
 }
@@ -37,23 +43,33 @@ header > h1 {
     margin-top: 8px;
     font-family: var(--fonte1);
     text-shadow: 5px 5px 5px black;
+    font-size: 30pt;
+
 }
 
 header > p {
-    color: rgba(241, 239, 239, 0.964);
-    font-size: 18px;
-    margin-bottom: 40px;
+    color: var(--cor4);
+    font-size: 15pt;
+    margin-top: -20px;
+    text-shadow: 5px 5px 5px black;
+    font-family: var(--fonte1);
+    font-style: normal;
 }
 
 
 div#conteudo {
-    background: rgb(192, 188, 188);
+    background:var(--cor4);
+    padding-bottom: 20px;
     box-sizing: content-box ;
-    border-radius: ;
+    border-radius: 2%;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.707);
+    
+    
 }
 
 div#conteudo > h2 {
     text-align: center;
+    padding-top: 10px;
     margin-top: 20px;
     font-size: x-large;
 }
@@ -63,6 +79,7 @@ div#conteudo > p {
     margin: auto;
     text-align: center;
     font-size: 14pt;
+    font-family: var(--fonte2);
 
 }
 
@@ -71,4 +88,21 @@ div#conteudo > p#p1 {
     margin-bottom: 10px;
 
 }
+
+footer {
+    background: var(--cor1);
+    color: var(--cor4);
+    text-align: center;
+    margin-top: 20px;
+    padding-bottom: 20px;
+}
+
+footer {
+    padding-top: 15px;
+}
+
+
+  }
+  
+
 
